package seedu.duke.data.state;

public enum StateType {
    MAIN_STATE,
    TASK_STATE
}
