@startuml
'https://plantuml.com/sequence-diagram

class Command {
    +CommandResult execute()
}

class AddTaskCommand {
    +COMMAND_WORD : String
    +MESSAGE_SUCCESS : String
    +MESSAGE_DUPLICATE_TASK : String
    +LOGGER : Logger
    -taskType : String
    -args : String[]
    -toAdd : Task
    +execute() : CommandResult
}

Command <|-- AddTaskCommand

class Task {
    +createTask(type : String, args : String[]) : Task
}

class TaskList {
    +addTask(task : Task)
}

class State {
    +getState() : StateType
}

enum StateType {
    TASK_STATE
}

interface CommandParser {
    +execute(line : String, state : State) : Command
}

class Parser {
    +LOGGER : Logger
    +parseCommand(line : String, state : State) : Command
}

class AddDeadlineParser {
    +execute(line : String, state : State) : Command
}

class AddRepeatParser {
    +execute(line : String, state : State) : Command
}

class AddTodoParser {
    +execute(line : String, state : State) : Command
}

class Duration {
    +extract(line : String) : String
}

class TaskName {
    +extract(line : String) : String
}

class Tag {
    +extract(line : String) : String
}

AddTaskCommand --> Task
AddTaskCommand --> TaskList
AddDeadlineParser --> AddTaskCommand
AddRepeatParser --> AddTaskCommand
AddTodoParser --> AddTaskCommand
Parser --> CommandParser
Parser --> State
State --> StateType
AddDeadlineParser --> Duration
AddDeadlineParser --> TaskName
AddDeadlineParser --> Tag
AddRepeatParser --> Duration
AddRepeatParser --> TaskName
AddRepeatParser --> Tag
AddTodoParser --> TaskName
AddTodoParser --> Tag
@enduml
